--- a/custom_sale_project/views/project_task_view.xml
+++ b/custom_sale_project/views/project_task_view.xml
@@ -4,31 +4,40 @@
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="arch" type="xml">
+            <xpath expr="//div[@name='button_box']" position="inside">
+                <button name="action_view_product" type="object" string="View Product"
+                        class="oe_stat_button"
+                        invisible="not product_id"/>
+            </xpath>
             <xpath expr="//sheet/group" position="after">
                 <group string="BOM INFORMATION" invisible=" not is_new_bom">
                     <group>
                         <field name="product_name"/>
                         <field name="quantity"/>
+                        <field name="margin"/>
+                        <field name="total_price" invisible="1"/>
                     </group>
                     <field name="sale_bom_ids">
                         <tree editable="bottom">
                             <field name="product_id"/>
+                            <field name="vendor_partner"/>
+                            <field name="vendor_price"/>
+                            <field name="discount"/>
+                            <field name="available_vendors" column_invisible="1"/>
                             <field name="available_qty" readonly="1"/>
-                            <field name="product_cost" readonly="1"/>
-                            <field name="quantity"/>
+                            <field name="quantity" default="1.00"/>
                         </tree>
                     </field>
                 </group>
 
             </xpath>
             <field name="tag_ids" position="after">
-
                 <field name="is_new_bom"/>
-
-
+                <field name="product_id" invisible="1"/>
             </field>
             <xpath expr="//field[@name='personal_stage_type_id']" position="after">
-                <button string="Create New BoM" name="action_create_product_bom" type="object" invisible=" not is_new_bom"/>
+                <button string="Create New BoM" name="action_create_product_bom" type="object"
+                        invisible=" not is_new_bom"/>
             </xpath>
         </field>
     </record>
