--- a/custom_sale_project/views/sale_order_view.xml
+++ b/custom_sale_project/views/sale_order_view.xml
@@ -4,15 +4,32 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//div[@name='button_box']" position="inside">
+                <button name="action_view_project"
+                        type="object"
+                        class="oe_stat_button"
+                        icon="fa-folder">
+                    <field name="project_id" widget="statinfo"/>
+                </button>
+
+                <button name="action_view_tasks"
+                        type="object"
+                        class="oe_stat_button"
+                        icon="fa-tasks">
+                    <field name="task_count" widget="statinfo"/>
+                </button>
+            </xpath>
+
             <header>
                 <button name="action_create_sale_project" type="object"
                         string="Create Project" class="btn-primary"/>
             </header>
 
             <xpath expr="//field[@name='order_line']/tree" position="inside">
-                <field name="discount_amount" invisible="1"/>
+                <field name="discount_amount" column_invisible="True"/>
                 <field name="discount_value"/>
             </xpath>
+
 
         </field>
 
