--- a/custom_quot_report_ftmc/report/report_template.xml
+++ b/custom_quot_report_ftmc/report/report_template.xml
@@ -10,5 +10,16 @@
             <field name="binding_model_id" ref="sale.model_sale_order"/>
             <field name="binding_type">report</field>
         </record>
+
+        <record id="custom_quotation_report_action_new" model="ir.actions.report">
+            <field name="name">Custom Technical Quotation Report</field>
+            <field name="model">sale.order</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">custom_quot_report_ftmc.new_report_technical_report</field>
+            <field name="report_file">custom_quot_report_ftmc.new_report_technical_report</field>
+            <field name="binding_model_id" ref="sale.model_sale_order"/>
+            <field name="binding_type">report</field>
+        </record>
+
     </data>
 </odoo>
