--- a/custom_sale_project/views/project_task_view.xml
+++ b/custom_sale_project/views/project_task_view.xml
@@ -13,6 +13,9 @@
                 <group string="BOM INFORMATION" invisible=" not is_new_bom">
                     <group>
                         <field name="product_name"/>
+                        <field name="product_uom"/>
+                        <field name="product_purchase_uom" />
+                        <field name="product_cat"/>
                         <field name="quantity"/>
                         <field name="margin"/>
                         <field name="total_price" invisible="1"/>
@@ -20,6 +23,8 @@
                     <field name="sale_bom_ids">
                         <tree editable="bottom">
                             <field name="product_id"/>
+                            <field name="product_uom"/>
+                            <field name="product_uom_category_id" column_invisible="1"/>
                             <field name="vendor_partner"/>
                             <field name="vendor_price"/>
                             <field name="discount"/>
