--- a/custom_sale_project/views/product_product_view.xml
+++ b/custom_sale_project/views/product_product_view.xml
@@ -21,4 +21,17 @@
                 </field>
             </field>
         </record>
+
+
+    <record id="product_template_search_view_description" model="ir.ui.view">
+        <field name="name">product.template.search.description.form</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_search_view"/>
+        <field name="arch" type="xml">
+            <field name="categ_id" position="after">
+                <field string="Sales description" name="description_sale" filter_domain="[('description_sale', 'ilike', self)]"/>
+            </field>
+
+        </field>
+    </record>
 </odoo>
