--- a/custom_sale_project/views/product_product_view.xml
+++ b/custom_sale_project/views/product_product_view.xml
@@ -11,16 +11,17 @@
         </field>
     </record>
 
-     <record id="view_project_product_template_tree" model="ir.ui.view">
-            <field name="name">product.template.tree.inherit.l10n.ke.edi.oscu</field>
-            <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_tree_view"/>
-            <field name="arch" type="xml">
-                <field name="default_code" position="after">
-                    <field name="description_sale" optional="show"/>
-                </field>
+    <record id="view_project_product_template_tree" model="ir.ui.view">
+        <field name="name">product.template.tree.inherit.l10n.ke.edi.oscu</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_tree_view"/>
+        <field name="arch" type="xml">
+            <field name="default_code" position="after">
+                <field name="description_sale" optional="show"/>
             </field>
-        </record>
+
+        </field>
+    </record>
 
 
     <record id="product_template_search_view_description" model="ir.ui.view">
@@ -29,9 +30,22 @@
         <field name="inherit_id" ref="product.product_template_search_view"/>
         <field name="arch" type="xml">
             <field name="categ_id" position="after">
-                <field string="Sales description" name="description_sale" filter_domain="[('description_sale', 'ilike', self)]"/>
+                <field string="Sales description" name="description_sale"
+                       filter_domain="[('description_sale', 'ilike', self)]"/>
             </field>
 
         </field>
     </record>
+
+    <record id="view_product_form_inherit_installation_hours" model="ir.ui.view">
+        <field name="name">product.template.form.inherit.installation.hours</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_form_view"/>
+        <field name="arch" type="xml">
+            <field name="taxes_id" position="after">
+                <field name="installation_hours" string="installation_hours"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
